turing-talos/apps/collabora/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
spec:
  template:
    spec:
      containers:
      - name: collabora
