turing-talos/apps/collabora/collabora-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collabora
spec:
  parentRefs:
  - name: envoy-private
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - collabora.jern.fi
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: collabora
      port: 80
